[feature] struct project folder
