# docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.AssignDelayRequest"
+                            "$ref": "#/definitions/controllers.AssignDelayRequest"
                         }
                     }
                 ],
@@ -32,25 +32,58 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.AssignDelayResponse"
+                            "$ref": "#/definitions/controllers.AssignDelayResponse"
                         }
                     },
                     "400": {
                         "description": "some field is invalid",
                         "schema": {
-                            "$ref": "#/definitions/api.AssignDelayResponse"
+                            "$ref": "#/definitions/controllers.AssignDelayResponse"
                         }
                     },
                     "500": {
                         "description": "other error",
                         "schema": {
-                            "$ref": "#/definitions/api.AssignDelayResponse"
+                            "$ref": "#/definitions/controllers.AssignDelayResponse"
                         }
                     }
                 }
             }
         },
         "/api/v1/delay/report": {
+            "get": {
+                "description": "report delay of an order that delivery is passed",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Delay"
+                ],
+                "summary": "report delay",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ReportDelayResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "some field is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ReportDelayResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "other error",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ReportDelayResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "report delay of a order that delivery is passed",
                 "consumes": [
@@ -70,7 +103,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.DelayReportRequest"
+                            "$ref": "#/definitions/controllers.DelayReportRequest"
                         }
                     }
                 ],
@@ -78,19 +111,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.DelayReportResponse"
+                            "$ref": "#/definitions/controllers.DelayReportResponse"
                         }
                     },
                     "400": {
                         "description": "some field is invalid",
                         "schema": {
-                            "$ref": "#/definitions/api.DelayReportResponse"
+                            "$ref": "#/definitions/controllers.DelayReportResponse"
                         }
                     },
                     "500": {
                         "description": "other error",
                         "schema": {
-                            "$ref": "#/definitions/api.DelayReportResponse"
+                            "$ref": "#/definitions/controllers.DelayReportResponse"
                         }
                     }
                 }
@@ -98,7 +131,7 @@
         }
     },
     "definitions": {
-        "api.AssignDelayRequest": {
+        "controllers.AssignDelayRequest": {
             "type": "object",
             "required": [
                 "agentId"
@@ -109,7 +142,7 @@
                 }
             }
         },
-        "api.AssignDelayResponse": {
+        "controllers.AssignDelayResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -123,7 +156,7 @@
                 }
             }
         },
-        "api.DelayReportRequest": {
+        "controllers.DelayReportRequest": {
             "type": "object",
             "required": [
                 "orderId"
@@ -134,7 +167,7 @@
                 }
             }
         },
-        "api.DelayReportResponse": {
+        "controllers.DelayReportResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -143,6 +176,18 @@
                 "message": {
                     "type": "string"
                 }
+            }
+        },
+        "controllers.ReportDelayResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "result": {}
             }
         }
     }
